--- a/mestre.html
+++ b/mestre.html
@@ -90,7 +90,7 @@
         <section id="FichasJogadores" class="coluna">
             <h1>Fichas dos Jogadores</h1>
             <a href="criarficha.html" style="text-decoration: none;">
-                <button type="submit" class="botao">Criar nova ficha</button>
+                <button type="button" class="botao">Criar nova ficha</button>
             </a>
             <form id="form-busca">
             
