--- a/criarficha.html
+++ b/criarficha.html
@@ -14,24 +14,74 @@
         <input type="text" id="name">
 
         <label for="name">Nome do Personagem:</label>
-        <input type="text" id="name">
+        <input type="text" id="name" required>
 
         <label for="aura">Aura do Personagem:</label>
-        <input type="text" id="aura">
+        <select id="aura">
+            <option value="">--Escolha uma aura--</option>
+            <option value="Reforço">Reforço</option>
+            <option value="Emissão">Emissão</option>
+            <option value="Transformação">Transformação</option>
+            <option value="Materialização">Materialização</option>
+            <option value="Manipulação">Manipulação</option>
+        </select>
 
         <label for="classe">Classe do Personagem:</label>
-        <input type="text" id="classe">
+        <select name="classe" id="classe">
+            <option value="">--Escolha uma Classe--</option>
+            <option value="Mago elemental">Mago elemental</option>
+            <option value="Místico">Místico</option>
+            <option value="Mago de fronte">Mago de fronte</option>
+            <option value="Fimbulwinter">Fimbulwinter</option>
+            <option value="Feengari">Feengari</option>
+            <option value="Ascendente">Ascendente</option>
+            <option value="Espadachim">Espadachim</option>
+            <option value="Arma de Corda">Arma de Corda</option>
+            <option value="Nórdico">Nórdico</option>
+            <option value="Lanceiro">Lanceiro</option>
+            <option value="Atirador de elite">Atirador de elite</option>
+            <option value="Assassino">Assassino</option>
+            <option value="Gladiador">Gladiador</option>
+            <option value="Charlatão">Charlatão</option>
+            <option value="Alquimista">Alquimista</option>
+            <option value="Artífice">Artífice</option>
+
+        </select>
 
         <label for="trilha">Trilha do Personagem:</label>
-        <input type="text" id="trilha">
+        <select name="trilha" id="trilha">
+            <option value="">--Escolha uma trilha--</option>
+            <option value="Envoltura">Envoltura</option>
+            <option value="Expansão">Expansão</option>
+            <option value="Liberação">Liberação</option>
+        </select>
+
+        <div id="pontos_disponiveis"></div>
 
         <label for="nivel">Nível do Personagem:</label>
-        <input type="number" id="nivel">
+        <input type="number" max="16" min="0" id="nivel">
+
+        <label for="atributo-Força">Força</label>
+        <input type="number" id="atributo-Força" max="8" min="0">
+
+        <label for="atributo-Destreza">Destreza</label>
+        <input type="number" id="atributo-Destreza" max="8" min="0">
+        
+        <label for="atributo-Vigor">Vigor</label>
+        <input type="number" id="atributo-Vigor" max="8" min="0">
+
+        <label for="atributo-Intelecto">Intelecto</label>
+        <input type="number" id="atributo-Intelecto" max="8" min="0">
+
+        <label for="atributo-Presença">Presença</label>
+        <input type="number" id="atributo-Presença" max="8" min="0">        
+
 
         <button type="submit" id="finalizar">Finalizar Ficha</button>
     </form>
     <p id="message"></p>
     <a href="mestre.html">Voltar para o painel</a>
+    <script src="mestre.js"></script>
 
     
 </body>
