--- a/site_inicial/criarficha.html
+++ b/site_inicial/criarficha.html
@@ -489,7 +489,7 @@
 
     <div class="header-nome">
         <label class="label-topo">Nome do Personagem</label>
-        <input type="text" class="input-nome" placeholder="Digite o nome..." value="Heroi Exemplo">
+        <input type="text" class="input-nome" placeholder="Digite o nome...">
     </div>
 
     <div class="painel-principal">
