Criação da Ficha Oficial
Transformei o criarficha em um visualizador de ficha, implementei o supabase e por meio de um buscador provisorio ja é possivel acessar as fichas criadas

--- a/site_inicial/mestre.html
+++ b/site_inicial/mestre.html
@@ -92,7 +92,7 @@
                 <button type="button" class="botao">Acessar regras</button>
             </a>   
         </section>
-
+        <a href="buscador.html">pagina de fichas</a>
     </main>
 </body>
 </html>
