--- a/site_inicial/ficha.html
+++ b/site_inicial/ficha.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ficha de Personagem</title>
-    <link rel="stylesheet" href="/site_inicial/css/criarficha.css">    
+    <link rel="stylesheet" href="/site_inicial/css/ficha.css">    
 </head>
 <body class="modo-edicao">
 
@@ -349,5 +349,5 @@
     <div id="saving-indicator" class="saving-indicator">Salvando alterações...</div>
     
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="/site_inicial/js/criarficha.js"></script>
+    <script src="/site_inicial/js/ficha.js"></script>
 </body>
