Pre versao final
Versao pre final, ultima escrita de codigo

--- a/site_inicial/ficha.html
+++ b/site_inicial/ficha.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ficha de Personagem</title>
-    <link rel="stylesheet" href="/site_inicial/css/ficha.css">    
+    <link rel="stylesheet" href="/site_inicial/css/ficha.css"> 
+    
+    <!-- Verificador de usuario -->
+    <script src="/site_inicial/js/auth-guard.js"></script>
+    <link rel="icon" href="/site_inicial/assets/icons/Chest-Skull.png">
+
 </head>
 <body class="modo-edicao">
 
