--- a/site_inicial/mestre-painel.html
+++ b/site_inicial/mestre-painel.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Painel do Mestre - Módulo 1: Ressonância</title>
+    <link rel="icon" href="/site_inicial/assets/icons/Chest-Skull.png">
+
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     
     <!-- Supabase JS -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
+    <!-- Verificador de usuario -->
+    <script src="/site_inicial/js/auth-guard.js"></script>
 
     <style>
         body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
