--- a/site_inicial/regras.html
+++ b/site_inicial/regras.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RPG Manager - Grimório de Regras</title>
+
+    <link rel="icon" href="/site_inicial/assets/icons/Chest-Skull.png">
+
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -11,6 +14,9 @@
     <script src="https://unpkg.com/lucide@latest"></script>
     <!-- Fonte Cinzel (Estilo RPG) -->
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+
+    <!-- Verificador de usuario -->
+    <script src="/site_inicial/js/auth-guard.js"></script>
 
     <!-- Configuração Visual -->
     <script>
