--- a/dashboard.html
+++ b/dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RPG Manager | Hub Central</title>
-    <link rel="icon" href="/site_inicial/assets/icons/Chest-Skull.png">
+    <link rel="icon" href="assets/icons/Chest-Skull.png">
 
     
     <!-- Stack Tecnológica -->
@@ -68,7 +68,7 @@
             </div>
             <div>
                 <h1 class="text-xl font-bold tracking-wider uppercase">RPG Manager</h1>
-                <p class="text-xs text-slate-500">Campanha: A Sombra do Dragão</p>
+                <p class="text-xs text-slate-500">Campanha: Odisseia</p>
             </div>
         </div>
 
@@ -138,6 +138,6 @@
             </a>
         </div>
     </main>
-    <script src="/site_inicial/js/dashboard.js"></script>
+    <script src="js/dashboard.js"></script>
 </body>
 </html>
