--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Ícones Lucide -->
     <script src="https://unpkg.com/lucide@latest"></script>
 
-    <link rel="icon" href="/site_inicial/assets/icons/Chest-Skull.png">
+    <link rel="icon" href="assets/icons/Chest-Skull.png">
 
     <style>
         /* Configuração do Tailwind para o tema Dark Fantasy */
@@ -168,6 +168,6 @@
         
         <p class="text-center text-slate-500 text-xs mt-6 font-mono opacity-60">v2.0.1 • Sistema Dark Fantasy</p>
     </main>
-    <script src="/site_inicial/js/index.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
