--- a/mestre-painel.html
+++ b/mestre-painel.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Painel do Mestre - Módulo 1: Ressonância</title>
-    <link rel="icon" href="/site_inicial/assets/icons/Chest-Skull.png">
+    <link rel="icon" href="assets/icons/Chest-Skull.png">
 
     
     <!-- Tailwind CSS -->
@@ -14,9 +14,9 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
     <!-- Verificador de usuario -->
-    <script src="/site_inicial/js/auth-guard.js"></script>
+    <script src="js/auth-guard.js"></script>
 
-    <link rel="stylesheet" href="/site_inicial/css/mestre-painel.css">
+    <link rel="stylesheet" href="css/mestre-painel.css">
 </head>
 <body class="bg-slate-900 text-slate-100 min-h-screen pb-20">
 
@@ -181,6 +181,6 @@
             <div class="text-slate-600 italic text-center py-4">Início do registro...</div>
         </div>
     </div>
-    <script src="/site_inicial/js/mestre-painel.js"></script>
+    <script src="js/mestre-painel.js"></script>
 </body>
 </html>
