--- a/personagens.html
+++ b/personagens.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RPG Manager - Personagens</title>
 
-    <link rel="icon" href="/site_inicial/assets/icons/Chest-Skull.png">
+    <link rel="icon" href="assets/icons/Chest-Skull.png">
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -17,7 +17,7 @@
     <script src="https://unpkg.com/lucide@latest"></script>
 
     <!-- Verificador de usuario -->
-    <script src="/site_inicial/js/auth-guard.js"></script>
+    <script src="js/auth-guard.js"></script>
 
     <!-- Configuração Visual (Mesma do Dashboard) -->
     <script>
@@ -110,6 +110,6 @@
         </div>
 
     </main>
-    <script src="/site_inicial/js/personagens.js"></script>
+    <script src="js/personagens.js"></script>
 </body>
 </html>
