--- a/regras.html
+++ b/regras.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RPG Manager - Grimório de Regras</title>
 
-    <link rel="icon" href="/site_inicial/assets/icons/Chest-Skull.png">
+    <link rel="icon" href="assets/icons/Chest-Skull.png">
 
     
     <!-- Tailwind CSS -->
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 
     <!-- Verificador de usuario -->
-    <script src="/site_inicial/js/auth-guard.js"></script>
+    <script src="js/auth-guard.js"></script>
 
     <!-- Configuração Visual -->
     <script>
@@ -2537,7 +2537,7 @@
                     </article>
                 </div>
             </section> -->
-    <script src="/site_inicial/js/regras.js"></script>
+    <script src="js/regras.js"></script>
 </body>
 </html>
 
