--- a/ficha.html
+++ b/ficha.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ficha de Personagem</title>
-    <link rel="stylesheet" href="/site_inicial/css/ficha.css"> 
+    <link rel="stylesheet" href="css/ficha.css"> 
     
     <!-- Verificador de usuario -->
-    <script src="/site_inicial/js/auth-guard.js"></script>
-    <link rel="icon" href="/site_inicial/assets/icons/Chest-Skull.png">
+    <script src="js/auth-guard.js"></script>
+    <link rel="icon" href="assets/icons/Chest-Skull.png">
 
 </head>
 <body class="modo-edicao">
@@ -357,5 +357,5 @@
     <div id="saving-indicator" class="saving-indicator">Salvando alterações...</div>
     
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="/site_inicial/js/ficha.js"></script>
+    <script src="js/ficha.js"></script>
 </body>
