--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                         <label class="block text-xs font-bold text-slate-400 uppercase mb-1 ml-1">Escolha seu Usuário</label>
                         <div class="relative">
                             <i data-lucide="user-plus" class="absolute left-3 top-3 w-5 h-5 text-slate-500"></i>
-                            <input type="text" id="reg-user" required placeholder="Ex: GandalfOBranco"
+                            <input type="text" id="reg-user" required placeholder="Ex: DeusdoCoito"
                                 class="w-full bg-slate-900/80 border border-slate-700 rounded-lg py-2.5 pl-10 pr-4 text-slate-200 focus:outline-none focus:border-emerald-500 focus:ring-1 focus:ring-emerald-500 transition-colors placeholder-slate-600">
                         </div>
                         <p class="text-[10px] text-slate-500 mt-1 ml-1">* Este será seu nome público.</p>
